p4-translate/tests/ArrayElementOpen.mj.err
 line 1, column 10: error: fixed array element type cannot be an open array
