p4-translate/tests/ArrayElementOpen.mj
type A = array 10 of array of int;
